--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,5 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
   body!= body
