testing post request

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,12 @@
 .container
     h1= title
 
-    form(action='/query', method='get')
+    form(action='/submit', method='post')
         .form-group.address
             label Find bathroom near
-            input.form-control.start-address(type='text', placeholder='Enter address')
+            input.form-control.start-address(type='text', name='startAddress', placeholder='Enter address')
         .form-group.radius
             label Search range
-            input.form-control.search-radius(type='number', placeholder='Default value...')
+            input.form-control.search-radius(type='number', name='searchRadius', placeholder='Default value...')
         .form-group.submit
             input.form-control.btn.btn-primary.submit-button(type='submit', value='Search')
