added google places example

--- a/views/search.jade
+++ b/views/search.jade
@@ -3,3 +3,8 @@
     p= address
     p Radius:&nbsp;
     p= radius
+
+    #map-canvas
+
+script(src="https://maps.googleapis.com/maps/api/js?libraries=places")
+script(src="/js/googleplaces.js")
