convert address to geocoded location and is able to search places by address and radius

--- a/views/search.jade
+++ b/views/search.jade
@@ -1,8 +1,8 @@
 .container
-    p Bathroom near:&nbsp;
-    p= address
-    p Radius:&nbsp;
-    p= radius
+    label Bathroom near
+    #address= address
+    label Radius
+    #radius= radius
 
     #map-canvas
 
