minor change for form

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,6 @@
             input.form-control.start-address(type='text', name='startAddress', placeholder='Enter address', required)
         .form-group.radius
             label Search range
-            input.form-control.search-radius(type='number', name='searchRadius', value='500')
+            input.form-control.search-radius(type='number', name='searchRadius', value='500', required)
         .form-group.submit
             input.form-control.btn.btn-primary.submit-button(type='submit', value='Search')
