--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 .container
     h1= title
 
-    form(action='/submit', method='post')
+    form(action='/query', method='post')
         .form-group.address
             label Find bathroom near
             input.form-control.start-address(type='text', name='startAddress', placeholder='Enter address', required)
