link title to home page

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 .container
-    h1= title
+    h1
+        a(href='/')= title
 
     form(action='/query', method='post')
         .form-group.address
