--- a/views/index.jade
+++ b/views/index.jade
@@ -11,3 +11,6 @@
             input.form-control.search-radius(type='number', name='searchRadius', value='500', required)
         .form-group.submit
             input.form-control.btn.btn-primary.submit-button(type='submit', value='Search')
+
+script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true")
+script(src="/js/geolocation.js")
