add active links

--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@
 
     if (!user)
       ul(class="nav navbar-nav")
-        li
+        li(class="active")
           a(href="/login") Login
         li
           a(href="/register") Register
