--- a/views/register.jade
+++ b/views/register.jade
@@ -7,7 +7,7 @@
       ul(class="nav navbar-nav")
         li
           a(href="/login") Login
-        li
+        li(class="active")
           a(href="/register") Register
 
     if (user)
