--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 .navbar.navbar-default
   .container-fluid
     .navbar-header
-      a(class="navbar-brand" href="/")= title
+      a(class="navbar-brand" href="/") Out House
 
     if (!user)
       ul(class="nav navbar-nav")
