--- a/views/register.jade
+++ b/views/register.jade
@@ -18,15 +18,14 @@
 
 
 .container
-  h1 Register Page
-  p.lead Say something worthwhile here.
+  h1 Register
   br
-  form(role='form', action="/register",method="post", style='max-width: 300px;')
+  form(role='form', action="/register",method="post")
     .form-group
         input.form-control(type='text', name="username", placeholder='Enter Username', required)
     .form-group
       input.form-control(type='password', name="password", placeholder='Password', required)
-    button.btn.btn-default(type='submit') Submit
-    &nbsp;
-    a(href='/')
-      button.btn.btn-primary(type="button") Cancel
+    button.btn.btn-primary(type='submit') Submit
+
+  br
+  h4= info
