--- a/views/login.jade
+++ b/views/login.jade
@@ -22,7 +22,9 @@
   br
   form(role='form', action="/login",method="post")
     .form-group
-        input.form-control(type='text', name="username", placeholder='Enter Username', required)
+      label Username
+      input.form-control(type='text', name="username", required)
     .form-group
-      input.form-control(type='password', name="password", placeholder='Password', required)
+      label Password
+      input.form-control(type='password', name="password", required)
     button.btn.btn-primary(type='submit') Submit
