add form ids and input classes

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@
 
 .container
 
-    form(action='/query', method='post')
+    form(action='/query', method='post', id='query-form')
         .form-group.address
             label Find bathroom near
             input.form-control.start-address(type='text', name='startAddress', placeholder='Enter address', required)
