--- a/views/login.jade
+++ b/views/login.jade
@@ -20,11 +20,11 @@
 .container
   h1 Login
   br
-  form(role='form', action="/login",method="post")
-    .form-group
+  form(role='form', action="/login", method="post", id="login-form")
+    .form-group.username
       label Username
       input.form-control(type='text', name="username", required)
-    .form-group
+    .form-group.password
       label Password
       input.form-control(type='password', name="password", required)
     button.btn.btn-primary(type='submit') Submit
