--- a/views/register.jade
+++ b/views/register.jade
@@ -20,11 +20,11 @@
 .container
   h1 Register
   br
-  form(role='form', action="/register",method="post")
-    .form-group
+  form(role='form', action="/register", method="post", id="register-form")
+    .form-group.username
       label Username
       input.form-control(type='text', name="username", required)
-    .form-group
+    .form-group.password
       label Password
       input.form-control(type='password', name="password", required)
     button.btn.btn-primary(type='submit') Submit
