--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,9 @@
         .form-group.radius
             label Search range
             input.form-control.search-radius(type='number', name='searchRadius', value='500', required)
+        .form-group.method
+            label Transportation Method
+            input.form-control.transport-method(type='text', name='transportMethod', placeholder='walking, bicycling, transit, or driving', required)
         .form-group.submit
             input.form-control.btn.btn-primary.submit-button(type='submit', value='Search')
 
