--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,8 @@
     if (user)
       ul(class="nav navbar-nav")
         li
+          a(href="/profile") Profile
+        li
           a(href="/logout") Logout
       p(class="navbar-text navbar-right") Signed in as #{user.username}
 
