--- a/views/index.jade
+++ b/views/index.jade
@@ -28,8 +28,8 @@
         .form-group.radius
             label Search range
             input.form-control.search-radius(type='number', name='searchRadius', value='500', required)
-        .form-group.method
-            <label for="Transportation Method">Select a Transportation Method</label>
+        .form-group.transport-method
+            label Transportation Method
             input(type="radio", name="transportMethod", value="Walking", checked)
             | Walking
             input(type="radio", name="transportMethod", value="Driving")
