--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 .navbar.navbar-default
-  .container-fluid
+  .container
     .navbar-header
       a(class="navbar-brand" href="/") Out House
 
@@ -20,7 +20,7 @@
 
 
 .container
-
+  .col-md-6.col-md-offset-3
     form(action='/query', method='post', id='query-form', class="form-horizontal")
         .form-group.address
             label Find bathroom near
@@ -29,7 +29,7 @@
             input.form-control(type='button', name='gps', class='btn btn-info' value='Use my location', onclick='initializeGeolocation()')
         .form-group.radius
             label Search range
-            input.form-control.search-radius(type='number', name='searchRadius', value='500', required)
+            input.form-control.search-radius(type='number', name='searchRadius', value='500', min='1' required)
         .form-group.transport-method
             label Transportation Method
             input(type="radio", name="transportMethod", value="Walking", checked)
