--- a/views/register.jade
+++ b/views/register.jade
@@ -1,5 +1,5 @@
 .navbar.navbar-default
-  .container-fluid
+  .container
     .navbar-header
       a(class="navbar-brand" href="/") Out House
 
@@ -10,28 +10,29 @@
         a(href="/register") Register
 
 .container
-  h1 Register
-  br
-  form(role='form', action="/register", method="post", id="register-form")
-    .form-group.username
-      label Username
-      input.form-control(type='text', name="username", required)
-    .form-group.email
-      label Email
-      input.form-control(type='email', name="email", required)
-    .form-group.password
-      label Password
-      input.form-control(type='password', name="password", required)
-    .form-group.gender
-      label Gender
-      input(type="radio", name="gender", value="male")
-      | Male
-      input(type="radio", name="gender", value="female")
-      | Female
-    .form-group.age
-      label Age
-      input.form-control(type='number', name="age")
-    button.btn.btn-primary(type='submit') Submit
+  .col-md-6.col-md-offset-3
+    h1 Register
+
+    form(role='form', action="/register", method="post", id="register-form")
+      .form-group.username
+        label Username
+        input.form-control(type='text', name="username", required)
+      .form-group.email
+        label Email
+        input.form-control(type='email', name="email", required)
+      .form-group.password
+        label Password
+        input.form-control(type='password', name="password", required)
+      .form-group.gender
+        label Gender
+        input(type="radio", name="gender", value="male")
+        | Male
+        input(type="radio", name="gender", value="female")
+        | Female
+      .form-group.age
+        label Age
+        input.form-control(type='number', name="age")
+      button.btn.btn-primary(type='submit') Submit
 
   br
   h4= info
