--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,9 @@
 
 .container
   .col-md-6.col-md-offset-3
+    .logo
+      img(src='/img/Paper-Roll.png')
+      
     form(action='/query', method='post', id='query-form', class="form-horizontal")
         .form-group.address
             label Find bathroom near
