--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,10 @@ a {
    margin-right: 2px;
  }
 
+ .radius-unit {
+   color: #888;
+ }
+
  /*
   * register.jade
   */
@@ -38,20 +42,43 @@ a {
  */
 
  .info {
-   color: #777;
+   color: #888;
+   font-size: 12px;
    margin-bottom: 20px;
+   display: none;
  }
 
-.map {
-  margin-bottom: 40px;
+ .num_bathrooms, .direction-dest {
+   display: inline;
+ }
+
+ .map {
+   margin-bottom: 200px;
+ }
+
+ .map-title {
+   visibility: hidden;
+ }
+
+.direction {
+  visibility: hidden;
+  height: 500px;
 }
 
-#map-canvas, #map-directions {
-    height: 400px;
+.direction h2 {
+  margin-left: 15px;
+}
+
+#map-canvas {
+    height: 500px;
+}
+
+#map-directions {
+  height: 400px;
 }
 
 .directions-panel {
-	margin-top: 25px;
+	margin-bottom: 10px;
 }
 
 .set-destination {
@@ -59,7 +86,7 @@ a {
 }
 
 #check-in {
-  display: none;
+  visibility: hidden;
   margin-bottom: 40px;
 }
 
