--- a/views/query.jade
+++ b/views/query.jade
@@ -19,8 +19,6 @@
       p(class="navbar-text navbar-right") Signed in as #{user.username}
 
 .container
-    h1
-        a(href='/')= title
 
     .info
       .row
@@ -49,25 +47,32 @@
     .row
       .col-md-12
         .map
-            label Bathrooms
+            h2(class='map-title')
+              .num_bathrooms
+              <span> bathrooms were found:</span>
             #map-canvas
 
     .row
+      .direction
+        h2
+          <span>Directions to </span>
+          .direction-dest
+          <span>:</span>
         .col-md-6
-            .map
-                label Directions
+            .directions-map
                 #map-directions
         .col-md-6
             .directions-panel
                 #directions-panel
 
     if (user)
-      .row
-        #check-in
-          form(action='/checkin', method='post', class='form-checkin')
-            .form-group
-              input(type='hidden', name='bathroom', id='form-bathroom-name', value='')
-              input.form-control(type='submit', value='Check-In', class='btn btn-primary btn-check-in')
+      .col-md-4.col-md-offset-4
+        .row
+          #check-in
+            form(action='/checkin', method='post', class='form-checkin')
+              .form-group
+                input(type='hidden', name='bathroom', id='form-bathroom-name', value='')
+                input.form-control(type='submit', value='Check-In', class='btn btn-primary btn-check-in')
 
 script(src="https://maps.googleapis.com/maps/api/js?libraries=places")
 script(src="/js/googlemaps.js")
